--- a/impl.tex
+++ b/impl.tex
@@ -27,7 +27,7 @@ The runtime can be configured to run on a dedicated processor core in order to k
 %\label{fig:handler_direct}
 %\end{subfigure}
 %\caption{Implementation of the inter-process communication handler}
-\end{figure*}
+\end{figure}
 
 \subsection{Task Management System}
 Tasks can be created as soon as input data are produced.
