--- a/paper.tex
+++ b/paper.tex
@@ -74,7 +74,7 @@
 %{\small \{tannguyen, jdbachan, balelbach, swwilliams, jshalf, ddonofrio, cychan\}@lbl.gov}}
 
 \begin{abstract}
-Recently, heterogeneous architectures have gained traction in HPC. Systems with deep and complex hardware hierarchy and equipped with accelerators each having thousands of cores are increasingly commonplace. Appraising the significance of various performance optimizations on such hardware design is extremely challenging. This paper addresses this non-trivial problem by providing a means of answering important questions such as how many accelerator cores a kernel can scale to, how much improvement an application may realize with load balancing, and whether an application benefits from masking/avoiding communication overheads. To this end, we present a solution based on task parallelism, abstracting away many hardware details associated with sophisticated accelerator architectures such as GPUs. We also develop RambutanAcc, a runtime system that can schedule tasks on various hardware levels, ranging from a GPU's SMs to compute nodes of a cluster. We point out effective optimizations for four HPC benchmarks without intrusively modifying the source code.
+Recently, heterogeneous architectures have gained traction in HPC. Systems with deep and complex hardware hierarchy and equipped with accelerators each having thousands of cores are increasingly commonplace. Appraising the significance of various performance optimizations on such hardware design is extremely challenging. This paper addresses this non-trivial problem by providing a means of answering important questions such as how many accelerator cores a kernel can scale to, how much improvement an application may realize with load balancing, and whether an application benefits from masking/avoiding communication overheads. To this end, we present a solution based on task parallelism, abstracting away many hardware details associated with sophisticated accelerator architectures such as GPUs. We also develop a runtime system that can schedule tasks on various hardware levels, ranging from a GPU's SMs to compute nodes of a cluster. We point out effective optimizations for four HPC benchmarks without intrusively modifying the source code.
 \end{abstract}
 
 \maketitle
@@ -116,6 +116,8 @@ Recently, heterogeneous architectures have gained traction in HPC. Systems with 
 %We would like to thank Paul Hargrove for his great help on GASNet.
 %We also thank Yifeng Cui for time allocations on the Comet system.
 %Tan Nguyen was a fellow of the Vietnam Education Foundation while conducting this research.
+
+\input{artifact}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{ref} 
