--- a/impl.tex
+++ b/impl.tex
@@ -1,4 +1,4 @@
-In this section we present the implementation details of {\em RambutanAcc}.
+In this section we present a runtime implementation that can efficiently schedule the task graph described in Sec.~\ref{sec:model}.
 At a high level, the runtime is constituted of three major modules: task management system, communication handler, and task scheduler as shown in Fig.~\ref{fig:impl}. 
 The runtime can be configured to run on a dedicated processor core in order to keep it responsive.
 
@@ -9,25 +9,22 @@ The runtime can be configured to run on a dedicated processor core in order to k
 \label{fig:impl}
 \end{figure}
 
-\begin{figure}[htb]
+
+\begin{figure*}[htb]
+\begin{subfigure}{0.4\textwidth}
 \centering
-\includegraphics[width=.49\textwidth]{figures/handler.pdf}
-\caption{Asynchronous remote data movement via GASNet}
+\includegraphics[width=\textwidth]{figures/handler.pdf}
+\caption{When direct communication is not available, data are asynchronously fetched through hosts}
 \label{fig:handler}
-%\begin{subfigure}{0.4\textwidth}
-%\centering
-%\includegraphics[width=\textwidth]{figures/handler.pdf}
-%\caption{When direct communication is not available, data are asynchronously fetched through hosts}
-%\label{fig:handler}
-%\end{subfigure}
-%\begin{subfigure}{0.4\textwidth}
-%\centering
-%\includegraphics[width=\textwidth]{figures/handler_dma.pdf}
-%\caption{The handler supports direct communication if hardware allows}
-%\label{fig:handler_direct}
-%\end{subfigure}
-%\caption{Implementation of the inter-process communication handler}
-\end{figure}
+\end{subfigure}
+\begin{subfigure}{0.4\textwidth}
+\centering
+\includegraphics[width=\textwidth]{figures/handler_dma.pdf}
+\caption{The handler supports direct communication if hardware allows}
+\label{fig:handler_direct}
+\end{subfigure}
+\caption{Implementation of the inter-process communication handler}
+\end{figure*}
 
 \subsection{Task Management System}
 Tasks can be created as soon as input data are produced.
@@ -66,12 +63,12 @@ The reverse process of writing back data produced by the task is similar to the 
 
 
 % JohnB: removed since this is unimplemented future work. No sense in cluttering up the pre-results narrative.
-%\subsubsection{Pulling parcels directly}
-%When the hardware supports direct communication among accelerators (e.g. via shared PCIe, NVlink, RDMA among accelerators), the communication handler can be configured to communicate data on the direct path.
-%Fig.~\ref{fig:handler_direct} shows that the communication process has been simplified significantly if direct communication is available.
-%Indeed, the data owner process only needs to respond to parcel requests with the address of the parcel.
-%Specifically, within a compute node if peer access among accelerators is enabled via a PCIe bus or NVLink connection, GASNet processes exchange information about a shared memory segment at the beginning of the program.
-%Then they only need to transfer an offset of the parcel, which allows the recipient to pull the data directly.
+\subsubsection{Pulling parcels directly}
+When the hardware supports direct communication among accelerators (e.g. via shared PCIe or NVlink), the communication handler can be configured to communicate data on the direct path.
+Fig.~\ref{fig:handler_direct} shows that the communication process has been simplified significantly if direct communication is available.
+Indeed, the data owner process only needs to respond to parcel requests with the address of the parcel.
+Specifically, within a compute node if peer access among accelerators is enabled via a PCIe bus or NVLink connection, GASNet processes exchange information about a shared memory segment at the beginning of the program.
+Then they only need to transfer an offset of the parcel, which allows the recipient to pull the data directly.
 %In the case of accelerators located on different compute nodes, parcels can still bypass the host memory using RDMAs.
 %Specifically, data can be transferred to the NIC without being staged to host memory.
 %The RDMA support in RambutanAcc is still under development though (using MPICH as the communication backend).
