--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,73 @@
+@inproceedings{Zhao:2017,
+ author = {Zhao, Ritchie and Song, Weinan and Zhang, Wentao and Xing, Tianwei and Lin, Jeng-Hau and Srivastava, Mani and Gupta, Rajesh and Zhang, Zhiru},
+ title = {Accelerating Binarized Convolutional Neural Networks with Software-Programmable FPGAs},
+ booktitle = {Proceedings of the 2017 ACM/SIGDA International Symposium on Field-Programmable Gate Arrays},
+ series = {FPGA '17},
+ year = {2017},
+ isbn = {978-1-4503-4354-1},
+ location = {Monterey, California, USA},
+ pages = {15--24},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/3020078.3021741},
+ doi = {10.1145/3020078.3021741},
+ acmid = {3021741},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {FPGAs, binarized, binarized convolutional networks, deep learning, high-level synthesis, reconfigurable computing},
+} 
+@ARTICLE{kim:DeepX, 
+author={L. W. Kim}, 
+journal={IEEE Transactions on Neural Networks and Learning Systems}, 
+title={DeepX: Deep Learning Accelerator for Restricted Boltzmann Machine Artificial Neural Networks}, 
+year={2017}, 
+volume={PP}, 
+number={99}, 
+pages={1-13}, 
+keywords={Acceleration;Computer architecture;Field programmable gate arrays;Hardware;Neural networks;Program processors;Training;Deep belief networks (DBNs);hardware-based computational acceleration;pipeline and parallel architecture;reconfigurable computing;restricted Boltzmann machine (RBM).}, 
+doi={10.1109/TNNLS.2017.2665555}, 
+ISSN={2162-237X}, 
+month={},}
+
+@INPROCEEDINGS{Chen:Eyeriss, 
+author={Y. H. Chen and T. Krishna and J. Emer and V. Sze}, 
+booktitle={2016 IEEE International Solid-State Circuits Conference (ISSCC)}, 
+title={14.5 Eyeriss: An energy-efficient reconfigurable accelerator for deep convolutional neural networks}, 
+year={2016}, 
+pages={262-263}, 
+keywords={computer vision;convolution;image filtering;learning (artificial intelligence);neural nets;AlexNet;CNN;Eyeriss framework;MAC;computer vision tasks;data movement;deep learning;deep-convolutional neural networks;energy-efficient reconfigurable accelerator;filter channels;filter sizes;filter weights;fully-convolutional networks;image pixel;Arrays;Bandwidth;Clocks;Logic arrays;Memory management;Random access memory;Shape}, 
+doi={10.1109/ISSCC.2016.7418007}, 
+month={Jan},}
+
+@inproceedings{Fang:UAP,
+ author = {Fang, Yuanwei and Hoang, Tung T. and Becchi, Michela and Chien, Andrew A.},
+ title = {Fast Support for Unstructured Data Processing: The Unified Automata Processor},
+ booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
+ series = {MICRO-48},
+ year = {2015},
+ isbn = {978-1-4503-4034-2},
+ location = {Waikiki, Hawaii},
+ pages = {533--545},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/2830772.2830809},
+ doi = {10.1145/2830772.2830809},
+ acmid = {2830809},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computer architecture, custom architecture, data processing, energy-efficient, finite automata, pattern-matching, processor},
+} 
+
+
+@INPROCEEDINGS{kim:neuromorphic, 
+author={D. Kim and J. Kung and S. Chai and S. Yalamanchili and S. Mukhopadhyay}, 
+booktitle={2016 ACM/IEEE 43rd Annual International Symposium on Computer Architecture (ISCA)}, 
+title={Neurocube: A Programmable Digital Neuromorphic Architecture with High-Density 3D Memory}, 
+year={2016}, 
+pages={380-392}, 
+keywords={logic circuits;memory architecture;neural nets;storage management chips;HMC;Neurocube;convolutional neural network;high-density 3D memory;logic tier;memory centric computing;neural computing;programmable digital neuromorphic architecture;Artificial neural networks;Biological neural networks;Computer architecture;Neurons;Random access memory;Three-dimensional displays;Neural nets;Neurocomputers;Neuromorphic computing}, 
+doi={10.1109/ISCA.2016.41}, 
+ISSN={1063-6897}, 
+month={June},}
+
 @article{facedetection_dws,
  author = {Nguyen, Tan and Hefenbrock, Daniel and Oberg, Jason and Kastner, Ryan and Baden, Scott},
  title = {A Software-based Dynamic-warp Scheduling Approach for Load-balancing the Viola-Jones Face Detection Algorithm on GPUs},
