--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,5 @@
-We have presented {\em RambutanAcc}, a programming model and runtime system for accelerator-based clusters.
-Experimental results on three benchmarks using up 16 K80 GPUs show that with {\em RambutanAcc} the programmer can realize better performance.
+We have presented a task-based programming model and runtime system for accelerator-based clusters.
+Experimental results on three benchmarks using up 16 K80 GPUs show that with the new code representation the programmer can realize better performance.
 The performance improvement comes from increasing throughput of processing fine-grained tasks on each individual GPU and/or hiding communication overheads among the GPUs.
-{\em RambutanAcc} offers a simple interface so the programmer can achieve these benefits without the needs of redesigning the algorithm and aggressively restructuring the source code as the system architecture evolves.
+Our solution offers a simple interface so the programmer can achieve these benefits without the needs of redesigning the algorithm and aggressively restructuring the source code as the system architecture evolves.
 We deem that our paper not only has impact on application development, but it can also initiate further research on HPC libraries such as developing and tuning cuSPARSE routines for running on the same GPUs. 
