final submission version

--- a/paper.tex
+++ b/paper.tex
@@ -117,7 +117,7 @@ Recently, heterogeneous architectures have gained traction in HPC. Systems with 
 %We also thank Yifeng Cui for time allocations on the Comet system.
 %Tan Nguyen was a fellow of the Vietnam Education Foundation while conducting this research.
 
-\input{artifact}
+%\input{artifact}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{ref} 
